# scholar-flux

./: .gitignore  .safety-project.ini  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  [CodeCompanion] 4227223  cspell.json  main.py  mypy.ini  prev-cov.xml  pyproject.toml  pytest.ini  tox.ini
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml  lint.yml  octoscan-security.yml  publish-pypi.yml  publish-testpypi.yml  publish.yml  spell_checker.yml
docs/: Makefile
docs/source/: advanced_workflows.rst  caching_strategies.rst  conf.py  custom_providers.rst  getting_started.rst  index.rst  modules.rst  multi_provider_search.rst  production_deployment.rst  response_handling_patterns.rst  schema_normalization.rst  scholar_flux.api.models.rst  scholar_flux.api.normalization.rst  scholar_flux.api.providers.rst  scholar_flux.api.rate_limiting.rst  scholar_flux.api.rst  scholar_flux.data.rst  scholar_flux.data_storage.rst  scholar_flux.package_metadata.rst  scholar_flux.sessions.models.rst  scholar_flux.utils.paths.rst  scholar_flux.utils.rst
src/scholar_flux/: __init__.py
tests/: conftest.py  test_import.py  test_plos_coord.py  testing_utilities.py
tests/api/: conftest.py  test_base_api.py  test_base_coordinator.py  test_coordinator_caching.py  test_coordinator_updates.py  test_multisearch.py  test_multisearch_coordinator.py  test_page_input.py  test_parameter_config.py  test_provider_dict_registries.py  test_provider_tools.py  test_providers.py  test_rate_limiter.py  test_response_handling.py  test_response_metadata.py  test_response_models.py  test_response_protocol_search.py  test_retry_handler.py  test_search_api.py  test_search_config.py  test_search_coordinator.py  test_search_results.py
tests/data/: conftest.py  test_data_extractor.py  test_data_parser.py  test_data_processor.py  test_data_processor_representations.py  test_normalizing_data_processor.py  test_pass_through_processor.py  test_path_processor.py  test_recursive_processing.py  test_response_cache.py
tests/data_storage/: test_data_cache_manager.py  test_data_storage.py  test_missing_storage_dependencies.py  test_mongo_edge_cases.py  test_redis_edge_cases.py  test_sql_edge_cases.py
tests/fixtures/: api_parameter_config.py  cleanup_utils.py  config.py  data_storage_classes.py  jsons.py  mock_cache_session.py  package_dependencies.py  plos_api.py  pubmed_api.py  response_simulation.py
tests/helpers/: __init__.py  search_api_helpers.py
tests/mocks/: mock_article_response.json  mock_article_response.yaml  mock_pubmed_fetch.json  mock_pubmed_search.json  mock_response_data.json  plos_page_2_data.json  simple.json
tests/normalize/: test_field_map.py  test_normalization.py  test_response_metadata_processing.py
tests/package_metadata/: test_package_metadata_setup.py
tests/security/: test_masker.py  test_masking.py
tests/utils/: test_confloader.py  test_encoder.py  test_encrypted_session_json.py  test_file_utils.py  test_helpers.py  (+7 more)
(+273 files in other folders)
